wp-content/themes/wesfarmers/style.css
/*
Theme Name:     Wesfarmers
Theme URI:      http://www.brownpaperbag.co.nz/
Description:    Child theme for the Twenty Twelve theme
Author:         Francis Park
Template:       twentytwelve          
Version:        0.1.0
*/
/* 
    Document   : layout
    Created on : 23-April-2013
    Author     : Shayne Liu
    Description: Main layout elements.
*/
/* reset specific for this site start */
body { font-family: Arial, sans-serif; font-size: 14px; line-height: 1.4; color: #666; background-color: #fff;}
a,a:link,a:hover,a:active,a:focus,a:visited { text-decoration:none; }
strong { font-weight:bold; }
em { font-style:italic; }
/* reset specific for this site end */

/* common classes start */
.sprite { background-image: url(./img/sprite.png); background-repeat: no-repeat; }
.icon { background-image: url(./img/icon.png); background-repeat: no-repeat; }
.left {float: left; }
.right {float: right; }
.wrapper { width: 940px; margin: 0 auto; display: block; }
/* common classes end */


/* header start */
#top-bar { line-height: 30px; font-weight: bold; font-size: 14px; color: #fff; width: 100%; height: 30px; padding: 13px 0; background: url(./img/top-bar-bg.png); }
#top-bar span { font-weight: normal; font-size: 12px; }

header { height: 25px; padding: 40px 0; }
#logo { width: 247px; height: 23px; background-position: 0 0; float: left; }
nav { float: right; }
.menu-main-container > li { display: inline; }
.menu-main-container > li > a { padding: 6px 0; float: left; margin-left: 15px; color: #255f38; font-family: "futura-pt",sans-serif; font-size: 17px; text-transform: uppercase; }
.menu-main-container > li > a.first { margin-left: 0; }
.menu-main-container > li > a.active { font-weight: bold; }

#slideshow {
    height: 335px; 
    border: 1px solid #fff; 
    overflow: hidden;
    position: relative;
    margin-bottom: 40px;
    -moz-box-shadow:    0 0 4px 2px #ccc;
    -webkit-box-shadow: 0 0 4px 2px #ccc;
    box-shadow:         0 0 4px 2px #ccc;
    -webkit-border-bottom-left-radius: 140px;
    -moz-border-radius-bottomleft: 140px;
    border-bottom-left-radius: 140px;
}
#slider { width: 100%; height: 335px; border-top: 10px solid #255f38; }
#slider > .slide { width: 100%; height: 335px; background-color: transparent; background-position: 0 0; background-repeat: no-repeat; }
#slider > .slide > .content { position: absolute; top: 70px; right: 0; width: 360px; padding: 30px; background: url(./img/slide-bg.png) 0 0 repeat; }
#slider > .slide > .content > .title { float: left; padding: 25px 80px 15px 0; border-top: 3px solid #b2bb1c; font-family: "futura-pt",sans-serif; font-size: 26px; color: #fff; text-transform: uppercase; }
#slider > .slide > .content > p { width: 100%; float: left; font-size: 14px; color: #fff; }
#prev, 
#next { z-index: 99; width: 28px; height: 28px; background-color: #255f38; position: absolute; bottom: 0; }
#prev { right: 29px; background-position: 0 -25px; }
#next { right: 0; background-position: -29px -25px; }

#banner {
    height: 220px; 
    border: 1px solid #fff; 
    overflow: hidden;
    position: relative;
    margin-bottom: 40px;
    -moz-box-shadow:    0 0 4px 2px #ccc;
    -webkit-box-shadow: 0 0 4px 2px #ccc;
    box-shadow:         0 0 4px 2px #ccc;
}
#banner > img { border-top: 10px solid #255f38; }

/* header end */


/* main content start */
section { padding-bottom: 50px; }
article { width: 620px; float: right; margin-top: -4px; }
aside { width: 300px; float: left; }
#page-title { border-top: 1px solid #275e37; color: #275e37; width: 275px; padding: 10px 0 0 25px; position: relative; font-family: "futura-pt",sans-serif; font-size: 24px; }
#page-title > span.sprite { background-color: #275e37; width: 16px; height: 16px; position: absolute; top: 18px; left: 0; background-position: -1px -57px; }
/* main content end */


/* footer start */

#footer-logo { margin-bottom: 50px; }
#footer-logo > li { float: left; margin-right: 5px; }
#footer-logo > li.last { margin-right: 0; }
footer { padding: 30px 0; color: #fff; border-top: 25px solid #d1ddd4; width: 100%; background: url(./img/footer-bg.png) top center repeat-x; }
footer a { color: #fff; }
#legalInfo { padding-bottom: 15px; }
.menu-footer-container { width: 100%; border-top: 1px solid #fff; padding: 15px 0; text-align: justify; float: none; }
.menu-footer-container > li { display: inline; }
.menu-footer-container > li > a { text-align: left; display: inline-block; }

.menu-footer-container > li.stretch {
    display: inline-block;
    width: 100%;
    
    /* IE6/7 support */
    *display: inline;
    zoom: 1;
}
/* footer end */


/* ------ page specific styles start ------ */
#home { padding-bottom: 20px; }
#welcome, 
#latest-news { width: 200px; float: left; margin-right: 40px; }

#our-brands { float: right; }
#our-brands > ul { width: 460px; }
#our-brands > ul > li { float: left; margin-bottom: 1px; margin-left: 1px; }
#our-brands > ul > li > a { display: block; }

#welcome > .title, 
#latest-news > .title, 
#our-brands > .title { position: relative; padding-left: 25px; font-family: "futura-pt",sans-serif; font-size: 24px; padding-bottom: 20px; }

#welcome > .title > span.sprite, 
#latest-news > .title > span.sprite, 
#our-brands > .title > span.sprite { width: 16px; height: 16px; position: absolute; top: 10px; left: 0; background-position: -1px -57px; }


#welcome > .title { color: #275e37; }
#latest-news > .title { color: #002d50; }
#our-brands > .title { color: #a74b17; }
#welcome > .title > span.sprite { background-color: #275e37; }
#latest-news > .title > span.sprite { background-color: #002d50; }
#our-brands > .title > span.sprite { background-color: #a74b17; }

#latest-news > ul > li { padding-bottom: 20px; }
#latest-news > ul > li > .title { font-weight: bold; color: #002d50; padding: 0; margin: 0; }
#latest-news > ul > li > p { padding: 0; margin: 0; }
#latest-news > ul > li > p > a { font-weight: bold; color: #666; background: url(./img/arrow-right-grey.png) 100% 60% no-repeat; }
#latest-news > ul > li.last { }
#latest-news > ul > li.last > a { color: #046229; font-weight: bold; background: url(./img/arrow-right-green.png) 100% 60% no-repeat; }



/* ------ page specific styles end ------ */

